<resources>
    <string name="app_name">PokéRogue Helper</string>
    <!-- type -->
    <string name="type_title_name">Type Matchups</string>
    <string name="type_my_type_title">My Type</string>
    <string name="type_opponent_type_title">Opponent Type</string>
    <string name="type_result_title">Matchup Results</string>
    <string name="type_result_sub_title">* 1x effectiveness is not displayed.</string>
    <string name="type_item_result_subject_mine">&#160;is</string>
    <string name="type_item_result_subject_opponent">&#160;to</string>
    <string name="type_item_result_tail">&#160;type</string>
    <string name="type_result_strong">Strong</string>
    <string name="type_result_weak">Weak</string>
    <string name="type_result_ineffective">Ineffective</string>
    <string name="type_result_normal">Neutral</string>

    <!--|: position of Type Icon , 1$s: type name, 2$s: type effect-->
    <string name="type_my_type_result">| %1$s is %2$s type against</string>
    <string name="type_opponent_type_result"> %2$s types against %1$s |</string>

    <string name="type_matching_type_normal">normal</string>
    <string name="type_matching_type_fire">fire</string>
    <string name="type_matching_type_water">water</string>
    <string name="type_matching_type_electric">electric</string>
    <string name="type_matching_type_grass">grass</string>
    <string name="type_matching_type_ice">ice</string>
    <string name="type_matching_type_fighting">fighting</string>
    <string name="type_matching_type_poison">poison</string>
    <string name="type_matching_type_ground">ground</string>
    <string name="type_matching_type_flying">flying</string>
    <string name="type_matching_type_psychic">psychic</string>
    <string name="type_matching_type_bug">bug</string>
    <string name="type_matching_type_rock">rock</string>
    <string name="type_matching_type_ghost">ghost</string>
    <string name="type_matching_type_dragon">dragon</string>
    <string name="type_matching_type_dark">dark</string>
    <string name="type_matching_type_steel">steel</string>
    <string name="type_matching_type_fairy">fairy</string>
    <string name="type_matching_type_stellar">stellar</string>

    <!-- home -->
    <string name="toolbar_pokerogue">PokéRogue Shortcut</string>
    <string name="toolbar_feedback">Send Feedback</string>
    <string name="home_pokerogue_url">https://pokerogue.net/</string>
    <string name="home_pokerogue_tip_url">https://namu.wiki/w/Pok%C3%A9Rogue</string>
    <string name="home_pokeroque_surey_url">https://docs.google.com/forms/d/e/1FAIpQLScd-Kp5zCzrcWKO6eXR7Ujgm0TscGrwuCPNCX1na0enhtVZaw/viewform</string>
    <string name="home_menu_type">Type Matchup</string>
    <string name="home_menu_pokemon_detail">Pokémon Dex</string>
    <string name="home_menu_ability">Ability Dex</string>
    <string name="home_menu_tip">Tips</string>
    <string name="home_menu_battle">Battle Scenarios</string>
    <string name="home_menu_biome">Biome Dex</string>
    <string name="home_menu_item">Item Dex</string>

    <!--    pokemon list-->
    <string name="pokemon_list_title_name">Pokémon Dex</string>
    <string name="pokemon_list_stat_format">%03d/%03d</string>
    <string name="pokemon_list_poke_name_format">%s #%d</string>
    <string name="pokemon_list_list_search_pokemon_hint">Search by Pokémon name.</string>
    <string name="pokemon_detail_error_containerId">Invalid containerId value (-1).</string>
    <string name="pokemon_list_loading_guide">Loading…</string>
    <string name="pokemon_list_empty_guide">No matching Pokémon found</string>
    <!--    dex-->
    <string name="dex_title_name">Pokémon Dex</string>
    <string name="dex_stat_format">%03d/%03d</string>
    <string name="dex_poke_name_format">%s #%d</string>
    <string name="dex_list_search_pokemon_hint">Search by Pokémon name.</string>
    <string name="dex_detail_error_containerId">Invalid containerId value (-1).</string>
    <string name="dex_list_loading_guide">Loading…</string>
    <string name="dex_list_empty_guide">No matching Pokémon found</string>
    <string name="dex_filter_chip">Filter %s</string>
    <string name="dex_filter_all_generations">All Generations</string>
    <string name="dex_filter_generation_format">Generation %d</string>
    <string name="dex_pokemon_sort_title">Sort Pokémon</string>

    <!--    sort-->
    <string name="by_pokedex_number">By Pokédex Number</string>
    <string name="by_base_stats">By Base Stats ⭐️️</string>
    <string name="by_speed">By Speed ⭐️️</string>
    <string name="by_attack">By Attack</string>
    <string name="by_defense">By Defense</string>
    <string name="by_special_attack">By Special Attack</string>
    <string name="by_special_defense">By Special Defense</string>
    <string name="by_hp">By HP</string>

    <!--    pokemon detail-->
    <string name="dex_detail_pokemon_stats_title">Base Stats</string>

    <string-array name="pokemon_detail_tab_titles">
        <item>Stats</item>
        <item>Evolution</item>
        <item>Moves</item>
        <item>Info</item>
    </string-array>

    <string name="pokemon_detail_to_battle_with_enemy_pop_up_descriptions">As Opponent Pokémon</string>
    <string name="pokemon_detail_to_battle_with_mine_pop_up_descriptions">As My Pokémon</string>

    <!--    pokemon stat-->
    <string name="pokemon_stat_hp">Max.HP</string>
    <string name="pokemon_stat_attack">Attack</string>
    <string name="pokemon_stat_defense">Defense</string>
    <string name="pokemon_stat_special_attack">Sp.Atk</string>
    <string name="pokemon_stat_special_defense">Sp.Def</string>
    <string name="pokemon_stat_speed">Speed</string>
    <string name="pokemon_stat_base_stat">Base Stat</string>

    <!--    pokemon detail skills-->
    <string name="pokemon_detail_skill_level">Level</string>
    <string name="pokemon_detail_skill_name">Move</string>
    <string name="pokemon_detail_skill_power">Power</string>
    <string name="pokemon_detail_skill_accuracy">Accuracy</string>
    <string name="pokemon_detail_skill_type">Type</string>
    <string name="pokemon_detail_skill_category">Category</string>

    <string name="pokemon_detail_egg_skill_title">Egg Moves</string>
    <string name="pokemon_detail_self_learn_skill_title">Learnable Moves</string>

    <!--    pokemon detail information-->
    <string name="pokemon_detail_information_weight_title">Weight</string>
    <string name="pokemon_detail_information_height_title">Height</string>
    <string name="pokemon_detail_biome_title">Biome</string>
    <string name="pokemon_detail_information_weight">%.1f  kg</string>
    <string name="pokemon_detail_information_height">%.1f  m</string>

    <!--    pokemon detail evolution-->
    <string name="pokemon_detail_evolution_no_evolution_chain">This Pokémon has no evolution chain.</string>
    <string name="pokemon_detail_evolution_level">Level %d</string>
    <string name="pokemon_detail_evolution_same_with_current_pokemon_message">This is the current Pokémon on the screen: %s.</string>
    <!-- ability -->
    <string name="ability_title_name">Ability Dex</string>
    <string name="ability_search_hint">Search by Ability name.</string>
    <string name="ability_detail_error_abilityId">Invalid abilityId value (-1).</string>
    <string name="ability_detail_error_containerId">Invalid containerId value (-1).</string>
    <string name="ability_detail_no_pokemons_with_ability">There are no pokemons corresponding ability</string>

    <!--    biome -->
    <string name="biome_title_name">Biome Dex</string>
    <string name="biome_guide_url">https://wiki.pokerogue.net/ko:biomes:biomes</string>
    <string name="biome_search_hint">Search by Biome name.</string>
    <string-array name="biome_tab_titles">
        <item>Gym</item>
        <item>Boss</item>
        <item>Wild</item>
        <item>Next Biome</item>
    </string-array>
    <string name="biome_navigation_mode_setting">Set Battle Mode</string>
    <string name="biome_navigation_mode_info">"By default, clicking Pokémon will navigate to the details page.\n To go to the battle page, please enable battle mode!"</string>

    <!--    biome detail gym -->
    <string name="biome_detail_gym">No Gym Leaders appear here</string>

    <!--    biome detail boss -->
    <string name="biome_detail_boss">No boss Pokémon appear here</string>

    <!--    biome detail next biome -->
    <string name="biome_detail_next_biome_probability">%.1f%%</string>

    <!--    item -->
    <string name="item_title_name">Item Dex</string>

    <!--    battle -->
    <string name="battle_title_name">Battle Scenarios</string>
    <string name="battle_result_title">Calculation Result</string>
    <string name="battle_calculated_power_title">Calculated Power</string>
    <string name="battle_power_title">Move Power</string>
    <string name="battle_multiplier_title">Multiplier</string>
    <string name="battle_accuracy_title">Accuracy: %s</string>
    <string name="battle_mine_pokemon_selection">Please select your Pokémon!</string>
    <string name="battle_opponent_pokemon_selection">Please select the opponent Pokémon!</string>
    <string name="battle_move_selection">Please select a move!</string>
    <string name="battle_selection_complete_btn">Complete Selection</string>
    <string name="battle_selection_search_skill_hint">Search for a move</string>
    <string name="battle_selection_pokemon_hint">Search for a Pokémon</string>
    <string name="battle_selection_title">Select a Pokémon</string>
    <string name="battle_selection_next_btn">Next</string>
    <string name="battle_selection_previous_btn">Previous</string>
    <string name="battle_result_multiplier">*</string>
    <string name="battle_result_equal">=</string>

    <!--    weather-->
    <string name="battle_weather_none">There is no weather</string>
    <string name="battle_weather_effect_title">Weather Effects</string>

    <!--    error-->
    <string name="error_IO_Exception">An unknown error occurred..</string>
    <string name="network_error_img_desc">Network Error Image</string>
    <string name="network_error_title">Not connected to the Internet!</string>
    <string name="network_error_desc">Your internet connection is unstable.\nPlease check your Wi-Fi again!!</string>
    <string name="network_error_retry">Retry</string>
    <string name="network_error_toast">Please reconnect to the internet and try again.</string>

    <!--   update-->
    <string name="update_snackBar_title">Update completed.</string>
    <string name="update_snackBar_action_text">Restart</string>
    <string name="update_result_ok">Starting download.</string>
    <string name="update_result_failed">Download failed.</string>
</resources>
