<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="poke.rogue.helper.presentation.battle.BattleViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.battle.BattleActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_battle"
            style="@style/CustomToolbarStyle"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:contentInsetStartWithNavigation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/battle_title_name" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="?attr/actionBarSize" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.68" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="40dp" />

        <Spinner
            android:id="@+id/spinner_weather"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_spinner"
            android:padding="0dp"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toTopOf="@id/tv_weather_description"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/gl_top"
            tools:listitem="@layout/item_spinner_weather" />

        <TextView
            android:id="@+id/tv_weather_description"
            style="@style/TextAppearance.Poke.Description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@{vm.selectedWeather.effect}"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@id/spinner_weather"
            app:layout_constraintStart_toStartOf="@id/spinner_weather"
            app:layout_constraintTop_toBottomOf="@id/spinner_weather" />

        <TextView
            android:id="@+id/tv_opponent_pokemon"
            style="@style/TextAppearance.Poke.TitleBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:text="@string/battle_opponent_pokemon_selection"
            app:layout_constraintEnd_toStartOf="@id/iv_opponent_pokemon"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toTopOf="@id/iv_opponent_pokemon" />

        <ImageView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:src="@drawable/icon_arena"
            app:layout_constraintEnd_toEndOf="@id/iv_opponent_pokemon"
            app:layout_constraintStart_toStartOf="@id/iv_opponent_pokemon"
            app:layout_constraintTop_toBottomOf="@id/iv_opponent_pokemon" />

        <ImageView
            android:id="@+id/iv_opponent_pokemon"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:src="@drawable/icon_pokemon_selection_op"
            app:layout_constraintBottom_toTopOf="@id/iv_mine_pokemon"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintTop_toBottomOf="@id/tv_weather_description" />

        <TextView
            android:id="@+id/tv_mine_pokemon"
            style="@style/TextAppearance.Poke.TitleBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:gravity="start"
            android:text="@string/battle_mine_pokemon_selection"
            app:layout_constraintBottom_toTopOf="@id/tv_moves_title"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@id/iv_mine_pokemon" />

        <ImageView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-24dp"
            android:src="@drawable/icon_arena"
            app:layout_constraintEnd_toEndOf="@id/iv_mine_pokemon"
            app:layout_constraintStart_toStartOf="@id/iv_mine_pokemon"
            app:layout_constraintTop_toBottomOf="@id/iv_mine_pokemon" />

        <ImageView
            android:id="@+id/iv_mine_pokemon"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-12dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/icon_pokemon_selection_mine"
            app:layout_constraintBottom_toTopOf="@id/gl_divider"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/iv_opponent_pokemon" />

        <TextView
            android:id="@+id/tv_moves_title"
            style="@style/TextAppearance.Poke.TitleBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_battle_default"
            android:paddingHorizontal="4dp"
            android:paddingVertical="8dp"
            android:text="@string/battle_move_selection"
            app:drawableStartCompat="@drawable/icon_arrow_right"
            app:layout_constraintBottom_toBottomOf="@id/iv_mine_pokemon"
            app:layout_constraintEnd_toEndOf="@id/tv_mine_pokemon"
            app:layout_constraintStart_toStartOf="@id/tv_mine_pokemon" />

        <TextView
            android:id="@+id/tv_result_title"
            style="@style/TextAppearance.Poke.TitleLargeBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/battle_result_title"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/gl_divider" />

        <View
            android:id="@+id/vw_divider"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:layout_margin="24dp"
            android:background="@drawable/bg_battle_default"
            app:layout_constraintBottom_toBottomOf="@id/gl_bottom"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_result_title" />

        <TextView
            android:id="@+id/tv_calculated_power_title"
            style="@style/TextAppearance.Poke.TitleLargeBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battle_calculated_power_title"
            app:layout_constraintEnd_toStartOf="@id/vw_divider"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toTopOf="@id/vw_divider" />

        <TextView
            android:id="@+id/tv_calculated_power_content"
            style="@style/HighlightTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="30"
            app:layout_constraintEnd_toEndOf="@id/tv_calculated_power_title"
            app:layout_constraintStart_toStartOf="@id/tv_calculated_power_title"
            app:layout_constraintTop_toBottomOf="@id/tv_calculated_power_title" />

        <TextView
            android:id="@+id/tv_accuracy_title"
            style="@style/TextAppearance.Poke.TitleLargeBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battle_accuracy_title"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@id/vw_divider"
            app:layout_constraintTop_toTopOf="@id/vw_divider" />

        <TextView
            android:id="@+id/tv_accuracy_content"
            style="@style/HighlightTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="30"
            app:layout_constraintEnd_toEndOf="@id/tv_accuracy_title"
            app:layout_constraintStart_toStartOf="@id/tv_accuracy_title"
            app:layout_constraintTop_toBottomOf="@id/tv_accuracy_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
